crates/tools-macros/tests/fixtures/fail_non_async.rs
use tools_macros::tool;

#[tool]
fn read_file(path: String) -> String {
    path
}

fn main() {}
